fix(subtitle): styles was changed from headline styles to subtitle styles. Also, changed a default variant to paragraph because subtitle was too big

--- a/src/components/ui/Article/components/Subtitle/subtitle.module.css
+++ b/src/components/ui/Article/components/Subtitle/subtitle.module.css
@@ -1,3 +1,5 @@
 .subtitle {
+  font-weight: normal;
+  font-size: var(--subtitle);
   color: var(--primary);
 }
